k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloword-svc
  namespace: helloword
spec:
  type: LoadBalancer
  selector:
    app: helloword
  ports:
    - port: 80
      targetPort: 5000
