k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloword-ingress
  namespace: helloword
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  rules:
    - host:  vand.click  # <-- your domain, or lave off for path-only
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: helloword-svc
                port:
                  number: 90
